# kolmafia-js

./: README.md  index.d.ts  index.js  package.json  test.ts  tsconfig.json
.github/workflows/: test.yml
contrib/: PriceAdvisor.d.ts  README.md  zlib.ash.d.ts
scripts/: .gitignore  generate.py  generateTypings.ts  index.d.ts  overrides.json  parameters.patch  pyproject.toml  typeOverrides.json
