[tool.poetry]
name = "kolmafia-js-build"
version = "0.1.0"
description = ""
authors = ["Sam Gaus <sam@gaus.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
pymafia = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
